[package]
name = "formula-1-library-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.171", features = ["serde_derive"] }
serde_json = "1.0.100"

[env]
RUST_BACKTRACE = "1"
